Fix overflow when screen is too small

--- a/src/assets/sass/components/_social-buttons.scss
+++ b/src/assets/sass/components/_social-buttons.scss
@@ -2,7 +2,8 @@
 
 .social-buttons {
 	@include outer-container;
-	@include position(0 0 60px $outer-gutter);
+	@include position(0 0 60px 0);
+	padding-left: $outer-gutter;
 
 	.fb-like {
 		margin-right: 18px;
